# GsTicKy

./: .gitignore  CMakeLists.txt  Makefile  README.md  com.jdeanes0.sticky.desktop
include/: appdata.h  callbacks.h  file_ops.h  keybinds.h  ui_helpers.h
lib/: keybinds.c
res/: config.ui  help.ui  main.ui  style.css  style.gcss
scripts/: build  build.sh  cleanup
src/: appdata.c  callbacks.c  file_ops.c  main.c  ui_helpers.c
toolchains/: mingw64.cmake
